Eliminando los comentarios

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,12 +14,11 @@
 
             <button type="submit" class="primary_button loggin_button"><a routerLink="/welcome">Log in</a></button>
 
-            <!-- <a href="/">Forgot my password</a> -->
         </form>
 
-        <!-- <button class="secondary_button signup_button" ><a routerLink="/register">Sign up</a></button> -->
+
     </div>
   </div>
-
+  <router-outlet> </router-outlet>
 </body>
-<!-- <router-outlet> </router-outlet> -->
+
